tests/fixtures/invalid/bool_2_args.py
# bool() takes at most 1 argument, got 2
x = bool(1, 1)
